@@ -2,13 +2,17 @@ package com.team4.backend.controller;
 
 import com.team4.backend.dto.AgencyDto;
 import com.team4.backend.dto.AgencyOfficeDto;
+import com.team4.backend.dto.response.ApiResponse;
 import com.team4.backend.entities.Agency;
 import com.team4.backend.entities.AgencyOffice;
 import com.team4.backend.mapper.AgencyMapper;
 import com.team4.backend.mapper.AgencyOfficeMapper;
 import com.team4.backend.repository.AgencyOfficeRepository;
 import com.team4.backend.repository.AgencyRepository;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -28,54 +32,104 @@ public class AgencyController {
     private AgencyOfficeMapper agencyOfficeMapper;
 
     @GetMapping("")
-    public List<AgencyDto> getAllAgencies() {
+    public ResponseEntity<ApiResponse<List<AgencyDto>>> getAllAgencies() {
         List<Agency> agencies = agencyRepository.findAll();
-        return agencies.stream()
-                .map(agencyMapper::toDto)
-                .collect(Collectors.toList());
+        if (agencies.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), "No agencies found"));
+        }
+        List<AgencyDto> agencyDtos = agencies.stream().map(agencyMapper::toDto).toList();
+        return ResponseEntity.ok(ApiResponse.success(agencyDtos));
     }
 
     @GetMapping("/{id}")
-    public AgencyDto getAgencyById(@PathVariable("id") Integer agencyId) {
+    public ResponseEntity<ApiResponse<AgencyDto>> getAgencyById(@PathVariable("id") Integer agencyId) {
         Optional<Agency> agency = agencyRepository.findById(agencyId);
-        return agency.map(agencyMapper::toDto).orElse(null);
-    }
-
-    @GetMapping("/offices/agency_id/{agency}")
-    public List<AgencyOfficeDto> getOfficesByAgencyId(@PathVariable("agency") Integer agencyId) {
-        List<AgencyOffice> offices = agencyOfficeRepository.findByAgencyId(agencyId);
-        return offices.stream()
-                .map(agencyOfficeMapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @GetMapping("/offices/{id}")
-    public AgencyOfficeDto getOfficeById(@PathVariable("id") Integer officeId) {
-        AgencyOffice office = agencyOfficeRepository.findById(officeId).get();
-        return agencyOfficeMapper.toDto(office);
+        if (agency.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), "Agency not found with id " + agencyId));
+        }
+        return ResponseEntity.ok(ApiResponse.success(agencyMapper.toDto(agency.get())));
     }
 
     @GetMapping("/offices")
-    public List<AgencyOfficeDto> getOffices() {
+    public ResponseEntity<ApiResponse<List<AgencyOfficeDto>>> getOffices() {
         List<AgencyOffice> offices = agencyOfficeRepository.findAll();
-        return offices.stream()
-                .map(agencyOfficeMapper::toDto)
-                .collect(Collectors.toList());
+        if (offices.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), "No agency offices found"));
+        }
+        List<AgencyOfficeDto> dtoList = offices.stream().map(agencyOfficeMapper::toDto).toList();
+        return ResponseEntity.ok(ApiResponse.success(dtoList));
+    }
+
+    @GetMapping("/offices/agency_id/{agency}")
+    public ResponseEntity<ApiResponse<List<AgencyOfficeDto>>> getOfficesByAgencyId(@PathVariable("agency") Integer agencyId) {
+        List<AgencyOffice> offices = agencyOfficeRepository.findByAgencyId(agencyId);
+        if (offices.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), "No offices found for agency ID " + agencyId));
+        }
+        List<AgencyOfficeDto> dtoList = offices.stream().map(agencyOfficeMapper::toDto).toList();
+        return ResponseEntity.ok(ApiResponse.success(dtoList));
+    }
+
+    @GetMapping("/offices/{id}")
+    public ResponseEntity<ApiResponse<AgencyOfficeDto>> getOfficeById(@PathVariable("id") Integer officeId) {
+        Optional<AgencyOffice> officeOpt = agencyOfficeRepository.findById(officeId);
+        if (officeOpt.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), "Office not found with id " + officeId));
+        }
+        return ResponseEntity.ok(ApiResponse.success(agencyOfficeMapper.toDto(officeOpt.get())));
     }
 
     @GetMapping("/offices/email/{email}")
-    public List<AgencyOfficeDto> getOfficeEmails(@PathVariable("email") String emailId) {
+    public ResponseEntity<ApiResponse<List<AgencyOfficeDto>>> getOfficeEmails(@PathVariable("email") String emailId) {
         List<AgencyOffice> offices = agencyOfficeRepository.findByOfficeMail(emailId);
-        return offices.stream()
-                .map(agencyOfficeMapper::toDto)
-                .collect(Collectors.toList());
+        if (offices.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), "No offices found with email " + emailId));
+        }
+        List<AgencyOfficeDto> dtoList = offices.stream().map(agencyOfficeMapper::toDto).toList();
+        return ResponseEntity.ok(ApiResponse.success(dtoList));
     }
 
     @GetMapping("/email/{email}")
-    public List<AgencyDto> getEmails(@PathVariable("email") String email) {
+    public ResponseEntity<ApiResponse<List<AgencyDto>>> getEmails(@PathVariable("email") String email) {
         List<Agency> agencies = agencyRepository.findByEmail(email);
-        return agencies.stream()
-                .map(agencyMapper::toDto)
-                .collect(Collectors.toList());
+        if (agencies.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), "No agencies found with email " + email));
+        }
+        List<AgencyDto> dtoList = agencies.stream().map(agencyMapper::toDto).toList();
+        return ResponseEntity.ok(ApiResponse.success(dtoList));
     }
+
+
+    @PostMapping
+    public ResponseEntity<String> createAgency(@RequestBody @Valid AgencyDto agencyDto) {
+        Agency agency = agencyMapper.toEntity(agencyDto);
+        agencyRepository.save(agency);
+        return ResponseEntity.status(HttpStatus.CREATED).body("Record Created Successfully");
+    }
+
+    @PutMapping("/{agency_id}")
+    public ResponseEntity<String> updateAgency(@PathVariable("agency_id") Integer agencyId,
+                                               @RequestBody @Valid AgencyDto agencyDto) {
+        Optional<Agency> existingAgencyOpt = agencyRepository.findById(agencyId);
+
+        if (existingAgencyOpt.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Agency not found.");
+        }
+
+        Agency existingAgency = existingAgencyOpt.get();
+        Agency updatedAgency = agencyMapper.toEntity(agencyDto);
+        updatedAgency.setId(agencyId);
+
+        agencyRepository.save(updatedAgency);
+
+        return ResponseEntity.ok("Record Updated Successfully.");
+    }
+
 }
